# anamify

./: README.md
files/: example.example.zone
src/: Makefile.in  anamify.c  configure.ac
